pi_parser.output
Terminals unused in grammar

    KW_REAL
    KW_NIL


Grammar

    0 $accept: program $end

    1 program: decl_list KW_FUNC KW_BEGIN '(' ')' '{' body '}'

    2 decl_list: decl_list decl
    3          | decl

    4 decl: constDeclaration ';'
    5     | varDeclaration ';'
    6     | functionDeclaration ';'

    7 decl_list_body: %empty
    8               | decl_list_body declInsideBody

    9 declInsideBody: constDeclaration ';'
   10               | varDeclaration ';'

   11 body: decl_list_body statementList

   12 constDeclaration: KW_CONST constAssignments dataType

   13 constAssignments: assignment
   14                 | constAssignments ',' assignment

   15 varDeclaration: KW_VAR varAssignments dataType

   16 varAssignments: varAssignment
   17               | varAssignments ',' varAssignment

   18 varAssignment: assignment
   19              | IDENTIFIER
   20              | IDENTIFIER '[' INTEGER ']'
   21              | IDENTIFIER '[' ']'

   22 functionDeclaration: KW_FUNC IDENTIFIER '(' functionParameters ')' dataType '{' body '}'

   23 functionParameters: %empty
   24                   | IDENTIFIER dataType
   25                   | functionParameters ',' IDENTIFIER dataType

   26 assignment: IDENTIFIER ASSIGN expr
   27           | IDENTIFIER '[' INTEGER ']' ASSIGN expr
   28           | IDENTIFIER '[' ']' ASSIGN expr

   29 functionInputs: expr
   30               | functionInputs ',' expr

   31 expr: value
   32     | IDENTIFIER
   33     | IDENTIFIER '[' expr ']'
   34     | IDENTIFIER '(' ')'
   35     | IDENTIFIER '(' functionInputs ')'
   36     | expr '+' expr
   37     | expr '-' expr
   38     | expr '*' expr
   39     | expr '/' expr
   40     | expr '%' expr
   41     | expr POWER expr
   42     | expr EQ expr
   43     | expr NEQ expr
   44     | expr LE expr
   45     | expr LT expr
   46     | expr GE expr
   47     | expr GT expr
   48     | expr KW_AND expr
   49     | expr KW_OR expr
   50     | KW_NOT expr
   51     | '+' expr
   52     | '-' expr
   53     | '(' expr ')'

   54 value: INTEGER
   55      | BOOL
   56      | REAL
   57      | STRING

   58 dataType: KW_INT
   59         | KW_BOOL
   60         | KW_STRING

   61 statementList: statementComplex
   62              | statementList statementComplex

   63 statementComplex: ';'
   64                 | statement ';'
   65                 | '{' statementList '}'
   66                 | statementFor
   67                 | statementWhile
   68                 | statementIf
   69                 | KW_BREAK ';'
   70                 | KW_CONTINUE ';'
   71                 | KW_RETURN expr ';'
   72                 | KW_RETURN ';'

   73 statement: IDENTIFIER ASSIGN expr
   74          | expr

   75 statementFor: KW_FOR '(' statement ';' expr ';' statement ')' statementComplex

   76 statementWhile: KW_WHILE '(' expr ')' statementComplex

   77 statementIf: KW_IF '(' expr ')' statementComplex
   78            | KW_IF '(' expr ')' statementComplex KW_ELSE statementComplex


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 40
    '(' (40) 1 22 34 35 53 75 76 77 78
    ')' (41) 1 22 34 35 53 75 76 77 78
    '*' (42) 38
    '+' (43) 36 51
    ',' (44) 14 17 25 30
    '-' (45) 37 52
    '/' (47) 39
    ';' (59) 4 5 6 9 10 63 64 69 70 71 72 75
    '[' (91) 20 21 27 28 33
    ']' (93) 20 21 27 28 33
    '{' (123) 1 22 65
    '}' (125) 1 22 65
    error (256)
    KW_INT (258) 58
    KW_REAL (259)
    KW_STRING (260) 60
    KW_BOOL (261) 59
    BOOL <crepr> (262) 55
    KW_VAR (263) 15
    KW_CONST (264) 12
    KW_IF (265) 77 78
    KW_ELSE (266) 78
    KW_FOR (267) 75
    KW_WHILE (268) 76
    KW_BREAK (269) 69
    KW_CONTINUE (270) 70
    KW_FUNC (271) 1 22
    KW_NIL (272)
    KW_AND (273) 48
    KW_OR (274) 49
    KW_NOT (275) 50
    KW_RETURN (276) 71 72
    KW_BEGIN (277) 1
    ASSIGN (278) 26 27 28 73
    STRING <crepr> (279) 57
    INTEGER <crepr> (280) 20 27 54
    REAL <crepr> (281) 56
    IDENTIFIER <crepr> (282) 19 20 21 22 24 25 26 27 28 32 33 34 35 73
    POWER (283) 41
    EQ (284) 42
    NEQ (285) 43
    LT (286) 45
    LE (287) 44
    GT (288) 47
    GE (289) 46
    REDUCE_PRIORITY (290)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    decl_list <crepr> (51)
        on left: 2 3
        on right: 1 2
    decl <crepr> (52)
        on left: 4 5 6
        on right: 2 3
    decl_list_body <crepr> (53)
        on left: 7 8
        on right: 8 11
    declInsideBody <crepr> (54)
        on left: 9 10
        on right: 8
    body <crepr> (55)
        on left: 11
        on right: 1 22
    constDeclaration <crepr> (56)
        on left: 12
        on right: 4 9
    constAssignments <crepr> (57)
        on left: 13 14
        on right: 12 14
    varDeclaration <crepr> (58)
        on left: 15
        on right: 5 10
    varAssignments <crepr> (59)
        on left: 16 17
        on right: 15 17
    varAssignment <crepr> (60)
        on left: 18 19 20 21
        on right: 16 17
    functionDeclaration <crepr> (61)
        on left: 22
        on right: 6
    functionParameters <crepr> (62)
        on left: 23 24 25
        on right: 22 25
    assignment <crepr> (63)
        on left: 26 27 28
        on right: 13 14 18
    functionInputs <crepr> (64)
        on left: 29 30
        on right: 30 35
    expr <crepr> (65)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 26 27 28 29 30 33 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 71 73 74 75 76 77 78
    value <crepr> (66)
        on left: 54 55 56 57
        on right: 31
    dataType <crepr> (67)
        on left: 58 59 60
        on right: 12 15 22 24 25
    statementList <crepr> (68)
        on left: 61 62
        on right: 11 62 65
    statementComplex <crepr> (69)
        on left: 63 64 65 66 67 68 69 70 71 72
        on right: 61 62 75 76 77 78
    statement <crepr> (70)
        on left: 73 74
        on right: 64 75
    statementFor <crepr> (71)
        on left: 75
        on right: 66
    statementWhile <crepr> (72)
        on left: 76
        on right: 67
    statementIf <crepr> (73)
        on left: 77 78
        on right: 68


State 0

    0 $accept: . program $end
    1 program: . decl_list KW_FUNC KW_BEGIN '(' ')' '{' body '}'
    2 decl_list: . decl_list decl
    3          | . decl
    4 decl: . constDeclaration ';'
    5     | . varDeclaration ';'
    6     | . functionDeclaration ';'
   12 constDeclaration: . KW_CONST constAssignments dataType
   15 varDeclaration: . KW_VAR varAssignments dataType
   22 functionDeclaration: . KW_FUNC IDENTIFIER '(' functionParameters ')' dataType '{' body '}'

    KW_VAR    shift, and go to state 1
    KW_CONST  shift, and go to state 2
    KW_FUNC   shift, and go to state 3

    program              go to state 4
    decl_list            go to state 5
    decl                 go to state 6
    constDeclaration     go to state 7
    varDeclaration       go to state 8
    functionDeclaration  go to state 9


State 1

   15 varDeclaration: KW_VAR . varAssignments dataType
   16 varAssignments: . varAssignment
   17               | . varAssignments ',' varAssignment
   18 varAssignment: . assignment
   19              | . IDENTIFIER
   20              | . IDENTIFIER '[' INTEGER ']'
   21              | . IDENTIFIER '[' ']'
   26 assignment: . IDENTIFIER ASSIGN expr
   27           | . IDENTIFIER '[' INTEGER ']' ASSIGN expr
   28           | . IDENTIFIER '[' ']' ASSIGN expr

    IDENTIFIER  shift, and go to state 10

    varAssignments  go to state 11
    varAssignment   go to state 12
    assignment      go to state 13


State 2

   12 constDeclaration: KW_CONST . constAssignments dataType
   13 constAssignments: . assignment
   14                 | . constAssignments ',' assignment
   26 assignment: . IDENTIFIER ASSIGN expr
   27           | . IDENTIFIER '[' INTEGER ']' ASSIGN expr
   28           | . IDENTIFIER '[' ']' ASSIGN expr

    IDENTIFIER  shift, and go to state 14

    constAssignments  go to state 15
    assignment        go to state 16


State 3

   22 functionDeclaration: KW_FUNC . IDENTIFIER '(' functionParameters ')' dataType '{' body '}'

    IDENTIFIER  shift, and go to state 17


State 4

    0 $accept: program . $end

    $end  shift, and go to state 18


State 5

    1 program: decl_list . KW_FUNC KW_BEGIN '(' ')' '{' body '}'
    2 decl_list: decl_list . decl
    4 decl: . constDeclaration ';'
    5     | . varDeclaration ';'
    6     | . functionDeclaration ';'
   12 constDeclaration: . KW_CONST constAssignments dataType
   15 varDeclaration: . KW_VAR varAssignments dataType
   22 functionDeclaration: . KW_FUNC IDENTIFIER '(' functionParameters ')' dataType '{' body '}'

    KW_VAR    shift, and go to state 1
    KW_CONST  shift, and go to state 2
    KW_FUNC   shift, and go to state 19

    decl                 go to state 20
    constDeclaration     go to state 7
    varDeclaration       go to state 8
    functionDeclaration  go to state 9


State 6

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 7

    4 decl: constDeclaration . ';'

    ';'  shift, and go to state 21


State 8

    5 decl: varDeclaration . ';'

    ';'  shift, and go to state 22


State 9

    6 decl: functionDeclaration . ';'

    ';'  shift, and go to state 23


State 10

   19 varAssignment: IDENTIFIER .  [KW_INT, KW_STRING, KW_BOOL, ',']
   20              | IDENTIFIER . '[' INTEGER ']'
   21              | IDENTIFIER . '[' ']'
   26 assignment: IDENTIFIER . ASSIGN expr
   27           | IDENTIFIER . '[' INTEGER ']' ASSIGN expr
   28           | IDENTIFIER . '[' ']' ASSIGN expr

    ASSIGN  shift, and go to state 24
    '['     shift, and go to state 25

    $default  reduce using rule 19 (varAssignment)


State 11

   15 varDeclaration: KW_VAR varAssignments . dataType
   17 varAssignments: varAssignments . ',' varAssignment
   58 dataType: . KW_INT
   59         | . KW_BOOL
   60         | . KW_STRING

    KW_INT     shift, and go to state 26
    KW_STRING  shift, and go to state 27
    KW_BOOL    shift, and go to state 28
    ','        shift, and go to state 29

    dataType  go to state 30


State 12

   16 varAssignments: varAssignment .

    $default  reduce using rule 16 (varAssignments)


State 13

   18 varAssignment: assignment .

    $default  reduce using rule 18 (varAssignment)


State 14

   26 assignment: IDENTIFIER . ASSIGN expr
   27           | IDENTIFIER . '[' INTEGER ']' ASSIGN expr
   28           | IDENTIFIER . '[' ']' ASSIGN expr

    ASSIGN  shift, and go to state 24
    '['     shift, and go to state 31


State 15

   12 constDeclaration: KW_CONST constAssignments . dataType
   14 constAssignments: constAssignments . ',' assignment
   58 dataType: . KW_INT
   59         | . KW_BOOL
   60         | . KW_STRING

    KW_INT     shift, and go to state 26
    KW_STRING  shift, and go to state 27
    KW_BOOL    shift, and go to state 28
    ','        shift, and go to state 32

    dataType  go to state 33


State 16

   13 constAssignments: assignment .

    $default  reduce using rule 13 (constAssignments)


State 17

   22 functionDeclaration: KW_FUNC IDENTIFIER . '(' functionParameters ')' dataType '{' body '}'

    '('  shift, and go to state 34


State 18

    0 $accept: program $end .

    $default  accept


State 19

    1 program: decl_list KW_FUNC . KW_BEGIN '(' ')' '{' body '}'
   22 functionDeclaration: KW_FUNC . IDENTIFIER '(' functionParameters ')' dataType '{' body '}'

    KW_BEGIN    shift, and go to state 35
    IDENTIFIER  shift, and go to state 17


State 20

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 21

    4 decl: constDeclaration ';' .

    $default  reduce using rule 4 (decl)


State 22

    5 decl: varDeclaration ';' .

    $default  reduce using rule 5 (decl)


State 23

    6 decl: functionDeclaration ';' .

    $default  reduce using rule 6 (decl)


State 24

   26 assignment: IDENTIFIER ASSIGN . expr
   31 expr: . value
   32     | . IDENTIFIER
   33     | . IDENTIFIER '[' expr ']'
   34     | . IDENTIFIER '(' ')'
   35     | . IDENTIFIER '(' functionInputs ')'
   36     | . expr '+' expr
   37     | . expr '-' expr
   38     | . expr '*' expr
   39     | . expr '/' expr
   40     | . expr '%' expr
   41     | . expr POWER expr
   42     | . expr EQ expr
   43     | . expr NEQ expr
   44     | . expr LE expr
   45     | . expr LT expr
   46     | . expr GE expr
   47     | . expr GT expr
   48     | . expr KW_AND expr
   49     | . expr KW_OR expr
   50     | . KW_NOT expr
   51     | . '+' expr
   52     | . '-' expr
   53     | . '(' expr ')'
   54 value: . INTEGER
   55      | . BOOL
   56      | . REAL
   57      | . STRING

    BOOL        shift, and go to state 36
    KW_NOT      shift, and go to state 37
    STRING      shift, and go to state 38
    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '+'         shift, and go to state 42
    '-'         shift, and go to state 43
    '('         shift, and go to state 44

    expr   go to state 45
    value  go to state 46


State 25

   20 varAssignment: IDENTIFIER '[' . INTEGER ']'
   21              | IDENTIFIER '[' . ']'
   27 assignment: IDENTIFIER '[' . INTEGER ']' ASSIGN expr
   28           | IDENTIFIER '[' . ']' ASSIGN expr

    INTEGER  shift, and go to state 47
    ']'      shift, and go to state 48


State 26

   58 dataType: KW_INT .

    $default  reduce using rule 58 (dataType)


State 27

   60 dataType: KW_STRING .

    $default  reduce using rule 60 (dataType)


State 28

   59 dataType: KW_BOOL .

    $default  reduce using rule 59 (dataType)


State 29

   17 varAssignments: varAssignments ',' . varAssignment
   18 varAssignment: . assignment
   19              | . IDENTIFIER
   20              | . IDENTIFIER '[' INTEGER ']'
   21              | . IDENTIFIER '[' ']'
   26 assignment: . IDENTIFIER ASSIGN expr
   27           | . IDENTIFIER '[' INTEGER ']' ASSIGN expr
   28           | . IDENTIFIER '[' ']' ASSIGN expr

    IDENTIFIER  shift, and go to state 10

    varAssignment  go to state 49
    assignment     go to state 13


State 30

   15 varDeclaration: KW_VAR varAssignments dataType .

    $default  reduce using rule 15 (varDeclaration)


State 31

   27 assignment: IDENTIFIER '[' . INTEGER ']' ASSIGN expr
   28           | IDENTIFIER '[' . ']' ASSIGN expr

    INTEGER  shift, and go to state 50
    ']'      shift, and go to state 51


State 32

   14 constAssignments: constAssignments ',' . assignment
   26 assignment: . IDENTIFIER ASSIGN expr
   27           | . IDENTIFIER '[' INTEGER ']' ASSIGN expr
   28           | . IDENTIFIER '[' ']' ASSIGN expr

    IDENTIFIER  shift, and go to state 14

    assignment  go to state 52


State 33

   12 constDeclaration: KW_CONST constAssignments dataType .

    $default  reduce using rule 12 (constDeclaration)


State 34

   22 functionDeclaration: KW_FUNC IDENTIFIER '(' . functionParameters ')' dataType '{' body '}'
   23 functionParameters: . %empty  [')', ',']
   24                   | . IDENTIFIER dataType
   25                   | . functionParameters ',' IDENTIFIER dataType

    IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 23 (functionParameters)

    functionParameters  go to state 54


State 35

    1 program: decl_list KW_FUNC KW_BEGIN . '(' ')' '{' body '}'

    '('  shift, and go to state 55


State 36

   55 value: BOOL .

    $default  reduce using rule 55 (value)


State 37

   31 expr: . value
   32     | . IDENTIFIER
   33     | . IDENTIFIER '[' expr ']'
   34     | . IDENTIFIER '(' ')'
   35     | . IDENTIFIER '(' functionInputs ')'
   36     | . expr '+' expr
   37     | . expr '-' expr
   38     | . expr '*' expr
   39     | . expr '/' expr
   40     | . expr '%' expr
   41     | . expr POWER expr
   42     | . expr EQ expr
   43     | . expr NEQ expr
   44     | . expr LE expr
   45     | . expr LT expr
   46     | . expr GE expr
   47     | . expr GT expr
   48     | . expr KW_AND expr
   49     | . expr KW_OR expr
   50     | . KW_NOT expr
   50     | KW_NOT . expr
   51     | . '+' expr
   52     | . '-' expr
   53     | . '(' expr ')'
   54 value: . INTEGER
   55      | . BOOL
   56      | . REAL
   57      | . STRING

    BOOL        shift, and go to state 36
    KW_NOT      shift, and go to state 37
    STRING      shift, and go to state 38
    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '+'         shift, and go to state 42
    '-'         shift, and go to state 43
    '('         shift, and go to state 44

    expr   go to state 56
    value  go to state 46


State 38

   57 value: STRING .

    $default  reduce using rule 57 (value)


State 39

   54 value: INTEGER .

    $default  reduce using rule 54 (value)


State 40

   56 value: REAL .

    $default  reduce using rule 56 (value)


State 41

   32 expr: IDENTIFIER .  [KW_INT, KW_STRING, KW_BOOL, KW_AND, KW_OR, POWER, EQ, NEQ, LT, LE, GT, GE, '+', '-', '*', '/', '%', ')', ';', ',', ']']
   33     | IDENTIFIER . '[' expr ']'
   34     | IDENTIFIER . '(' ')'
   35     | IDENTIFIER . '(' functionInputs ')'

    '('  shift, and go to state 57
    '['  shift, and go to state 58

    $default  reduce using rule 32 (expr)


State 42

   31 expr: . value
   32     | . IDENTIFIER
   33     | . IDENTIFIER '[' expr ']'
   34     | . IDENTIFIER '(' ')'
   35     | . IDENTIFIER '(' functionInputs ')'
   36     | . expr '+' expr
   37     | . expr '-' expr
   38     | . expr '*' expr
   39     | . expr '/' expr
   40     | . expr '%' expr
   41     | . expr POWER expr
   42     | . expr EQ expr
   43     | . expr NEQ expr
   44     | . expr LE expr
   45     | . expr LT expr
   46     | . expr GE expr
   47     | . expr GT expr
   48     | . expr KW_AND expr
   49     | . expr KW_OR expr
   50     | . KW_NOT expr
   51     | . '+' expr
   51     | '+' . expr
   52     | . '-' expr
   53     | . '(' expr ')'
   54 value: . INTEGER
   55      | . BOOL
   56      | . REAL
   57      | . STRING

    BOOL        shift, and go to state 36
    KW_NOT      shift, and go to state 37
    STRING      shift, and go to state 38
    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '+'         shift, and go to state 42
    '-'         shift, and go to state 43
    '('         shift, and go to state 44

    expr   go to state 59
    value  go to state 46


State 43

   31 expr: . value
   32     | . IDENTIFIER
   33     | . IDENTIFIER '[' expr ']'
   34     | . IDENTIFIER '(' ')'
   35     | . IDENTIFIER '(' functionInputs ')'
   36     | . expr '+' expr
   37     | . expr '-' expr
   38     | . expr '*' expr
   39     | . expr '/' expr
   40     | . expr '%' expr
   41     | . expr POWER expr
   42     | . expr EQ expr
   43     | . expr NEQ expr
   44     | . expr LE expr
   45     | . expr LT expr
   46     | . expr GE expr
   47     | . expr GT expr
   48     | . expr KW_AND expr
   49     | . expr KW_OR expr
   50     | . KW_NOT expr
   51     | . '+' expr
   52     | . '-' expr
   52     | '-' . expr
   53     | . '(' expr ')'
   54 value: . INTEGER
   55      | . BOOL
   56      | . REAL
   57      | . STRING

    BOOL        shift, and go to state 36
    KW_NOT      shift, and go to state 37
    STRING      shift, and go to state 38
    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '+'         shift, and go to state 42
    '-'         shift, and go to state 43
    '('         shift, and go to state 44

    expr   go to state 60
    value  go to state 46


State 44

   31 expr: . value
   32     | . IDENTIFIER
   33     | . IDENTIFIER '[' expr ']'
   34     | . IDENTIFIER '(' ')'
   35     | . IDENTIFIER '(' functionInputs ')'
   36     | . expr '+' expr
   37     | . expr '-' expr
   38     | . expr '*' expr
   39     | . expr '/' expr
   40     | . expr '%' expr
   41     | . expr POWER expr
   42     | . expr EQ expr
   43     | . expr NEQ expr
   44     | . expr LE expr
   45     | . expr LT expr
   46     | . expr GE expr
   47     | . expr GT expr
   48     | . expr KW_AND expr
   49     | . expr KW_OR expr
   50     | . KW_NOT expr
   51     | . '+' expr
   52     | . '-' expr
   53     | . '(' expr ')'
   53     | '(' . expr ')'
   54 value: . INTEGER
   55      | . BOOL
   56      | . REAL
   57      | . STRING

    BOOL        shift, and go to state 36
    KW_NOT      shift, and go to state 37
    STRING      shift, and go to state 38
    INTEGER     shift, and go to state 39
    REAL        shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '+'         shift, and go to state 42
    '-'         shift, and go to state 43
    '('         shift, and go to state 44

    expr   go to state 61
    value  go to state 46


State 45

   26 assignment: IDENTIFIER ASSIGN expr .  [KW_INT, KW_STRING, KW_BOOL, ',']
   36 expr: expr . '+' expr
   37     | expr . '-' expr
   38     | expr . '*' expr
   39     | expr . '/' expr
   40     | expr . '%' expr
   41     | expr . POWER expr
   42     | expr . EQ expr
   43     | expr . NEQ expr
   44     | expr . LE expr
   45     | expr . LT expr
   46     | expr . GE expr
   47     | expr . GT expr
   48     | expr . KW_AND expr
   49     | expr . KW_OR expr

    KW_AND  shift, and go to state 62
    KW_OR   shift, and go to state 63
    POWER   shift, and go to state 64
    EQ      shift, and go to state 65
    NEQ     shift, and go to state 66
    LT      shift, and go to state 67
    LE      shift, and go to state 68
    GT      shift, and go to state 69
    GE      shift, and go to state 70
    '+'     shift, and go to state 71
    '-'     shift, and go to state 72
    '*'     shift, and go to state 73
    '/'     shift, and go to state 74
    '%'     shift, and go to state 75

    $default  reduce using rule 26 (assignment)


State 46

   31 expr: value .

    $default  reduce using rule 31 (expr)


State 47

   20 varAssignment: IDENTIFIER '[' INTEGER . ']'
   27 assignment: IDENTIFIER '[' INTEGER . ']' ASSIGN expr

    ']'  shift, and go to state 76


State 48

   21 varAssignment: IDENTIFIER '[' ']' .  [KW_INT, KW_STRING, KW_BOOL, ',']
   28 assignment: IDENTIFIER '[' ']' . ASSIGN expr

    ASSIGN  shift, and go to state 77

    $default  reduce using rule 21 (varAssignment)


State 49

   17 varAssignments: varAssignments ',' varAssignment .

    $default  reduce using rule 17 (varAssignments)


State 50

   27 assignment: IDENTIFIER '[' INTEGER . ']' ASSIGN expr

    ']'  shift, and go to state 78


State 51

   28 assignment: IDENTIFIER '[' ']' . ASSIGN expr

    ASSIGN  shift, and go to state 77


State 52

   14 constAssignments: constAssignments ',' assignment .

    $default  reduce using rule 14 (constAssignments)


State 53

   24 functionParameters: IDENTIFIER . dataType
   58 dataType: . KW_INT
   59         | . KW_BOOL
   60         | . KW_STRING

    KW_INT     shift, and go to state 26
    KW_STRING  shift, and go to state 27
    KW_BOOL    shift, and go to state 28

    dataType  go to state 79


State 54

   22 functionDeclaration: KW_FUNC IDENTIFIER '(' functionParameters . ')' dataType '{' body '}'
   25 functionParameters: functionParameters . ',' IDENTIFIER dataType

    ')'  shift, and go to state 80
    ','  shift, and go to state 81


State 55

    1 program: decl_list KW_FUNC KW_BEGIN '(' . ')' '{' body '}'

    ')'  shift, and go to state 82


State 56
